@@ -1,0 +1,4 @@
+# pkgIndex.tcl --
+# Copyright (c) 2003 Andreas Kupries
+
+package ifneeded app-assemble 0.1 [list source [file join $dir assemble.tcl]]
